--- a/public/src/stylesheets/main.scss
+++ b/public/src/stylesheets/main.scss
@@ -21,6 +21,8 @@
 @import "components/button";
 @import "components/link";
 @import "components/fallback";
+@import "components/introduction";
+@import "components/toggle";
 
 @import "pages/home";
 
