Adding Expertise and Contact section

--- a/public/src/stylesheets/abstracts/_variables.scss
+++ b/public/src/stylesheets/abstracts/_variables.scss
@@ -9,6 +9,7 @@ $tertiary-color: darkslategrey;
 $accent-color: tan;
 
 $light-text: #ffffff;
+$medium-text: #434950;
 $dark-text: #212529;
 
 $light-background: #fafafa;
