--- a/public/src/stylesheets/base/_typography.scss
+++ b/public/src/stylesheets/base/_typography.scss
@@ -4,7 +4,7 @@ $body-font-family: "Montserrat", sans-serif;
 
 $heading-font-family: inherit;
 
-$primary-text-color: #474747;
+$primary-text-color: $dark-text;
 
 $heading-line-height: 2;
 $body-line-height: 2;
