--- a/public/src/stylesheets/components/_toggle.scss
+++ b/public/src/stylesheets/components/_toggle.scss
@@ -11,6 +11,7 @@
   border: unset;
   transition: all 0.35s ease-in-out;
   z-index: 4;
+  outline: none;
   @include tablet {
     display: none;
   }
@@ -31,6 +32,7 @@
   }
   &:after {
     top: 100%;
+    width: 75%;
   }
   &__line {
     top: 50%;
@@ -45,6 +47,7 @@
     }
     &:after {
       transform: rotate(45deg) translate(-10px, -10px);
+      width: 100%;
     }
   }
 }
