--- a/public/src/stylesheets/main.scss
+++ b/public/src/stylesheets/main.scss
@@ -23,6 +23,13 @@
 @import "components/fallback";
 @import "components/introduction";
 @import "components/toggle";
+@import "components/logo";
+@import "components/projects";
+@import "components/content";
+@import "components/skills";
+@import "components/contact";
+@import "components/form";
+@import "components/socials";
 
 @import "pages/home";
 
