--- a/public/src/stylesheets/abstracts/_variables.scss
+++ b/public/src/stylesheets/abstracts/_variables.scss
@@ -39,11 +39,11 @@ $accent-color-transparent: transparentize($accent-color, $transparency);
  * Miscellaneous.
  */
 
-$shadow: 0 3px 6px rgba(0, 0, 0, 0.251);
+$shadow: 0 4px 6px rgba(0, 0, 0, 0.05), 0 10px 20px rgba(0, 0, 0, 0.05);
 
 $overlay: rgba(0, 0, 0, 0.75);
 
-$round: 0.5rem;
+$round: 0.25rem;
 
 /**
 * Material design palette.
