--- a/public/src/stylesheets/components/_button.scss
+++ b/public/src/stylesheets/components/_button.scss
@@ -7,11 +7,12 @@
   cursor: pointer;
   min-width: 150px;
   text-align: center;
-  transition: background 0.2s ease-in-out;
+  transition: box-shadow 0.2s ease-in-out;
   font-weight: $medium;
   margin-top: 1.5rem;
   &:hover {
-    background: $primary-color-dark;
+    // background: $primary-color-dark;
+    box-shadow: 0 3px 20px rgba(59, 67, 191, 0.671);
   }
   &:active {
     opacity: 0.5;
