Fixing Introduction background path

--- a/public/src/stylesheets/components/_introduction.scss
+++ b/public/src/stylesheets/components/_introduction.scss
@@ -1,6 +1,6 @@
 // Introduction.
 .introduction {
-  background: url("../../assets/images/backgrounds/introduction.svg") no-repeat
+  background: url("../assets/images/backgrounds/introduction.svg") no-repeat
     center top / cover;
   &__layout {
     height: 100vh;
