--- a/public/src/stylesheets/components/_form.scss
+++ b/public/src/stylesheets/components/_form.scss
@@ -6,7 +6,7 @@
     margin-bottom: 1rem;
     border: unset;
     padding: 1rem;
-    background: rgb(245, 245, 245);
+    background: #f1f7ff;
     &::placeholder {
       color: rgb(99, 99, 99);
     }
