--- a/public/src/stylesheets/components/_introduction.scss
+++ b/public/src/stylesheets/components/_introduction.scss
@@ -8,6 +8,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    min-height: 600px;
   }
   &__content {
     max-width: 80%;
