--- a/public/src/stylesheets/components/_skills.scss
+++ b/public/src/stylesheets/components/_skills.scss
@@ -1,5 +1,9 @@
 // Skills.
 .skills {
+  text-align: center;
+  @include laptop {
+    text-align: left;
+  }
   &__inner {
     display: grid;
     grid-template-columns: 1fr;
