--- a/public/src/stylesheets/components/_socials.scss
+++ b/public/src/stylesheets/components/_socials.scss
@@ -3,6 +3,7 @@
   display: grid;
   grid-template-columns: repeat(3, 20px);
   grid-gap: 1rem;
+  justify-content: center;
   &__icon {
     @extend %hover;
     width: 20px;
