--- a/public/src/stylesheets/components/_toggle.scss
+++ b/public/src/stylesheets/components/_toggle.scss
@@ -3,7 +3,7 @@
   $self: &;
   width: 40px;
   height: 30px;
-  color: $white;
+  color: $dark-text;
   background: transparent;
   position: relative;
   padding: initial;
@@ -24,7 +24,7 @@
     position: absolute;
     width: 100%;
     height: 2px;
-    background: $white;
+    background: $dark-text;
     transition: all 0.15s ease-in-out;
   }
   &:before {
