--- a/public/src/stylesheets/layout/_header.scss
+++ b/public/src/stylesheets/layout/_header.scss
@@ -1,16 +1,49 @@
-// Header.
+// // Header.
 .header {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  padding: 1rem 0;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+  background: rgba(255, 255, 255, 0.95);
+  z-index: 5;
+  padding: 0.75rem 0;
   @include tablet {
-    padding: 2rem 0;
+    padding: 0.35rem 0;
+  }
+  &__layout {
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content: space-between;
+    align-items: center;
+    @include laptop {
+      grid-template-columns: 1fr 1fr 1fr;
+    }
+  }
+  &__button {
+    @extend %round;
+    width: auto;
+    margin-top: unset !important;
+    align-items: flex-end;
+    padding: 0.75rem 1.25rem !important;
+    min-width: unset !important;
+    margin-left: auto !important;
+  }
+  &__item {
+    &--toggle {
+      text-align: right;
+      @include tablet {
+        text-align: center;
+        display: none;
+      }
+    }
+    &--right {
+      text-align: right;
+      display: none;
+      @include tablet {
+        display: initial;
+      }
+    }
   }
 }
 
@@ -45,9 +78,6 @@
   }
   &__link {
     color: $dark-text;
-    @include tablet {
-      color: $white;
-    }
     &:hover,
     &--active {
       text-decoration: underline;
