--- a/public/src/stylesheets/abstracts/_variables.scss
+++ b/public/src/stylesheets/abstracts/_variables.scss
@@ -15,6 +15,8 @@ $dark-text: #212529;
 $light-background: #fafafa;
 $dark-background: #222b33;
 
+$border: rgba(0, 0, 0, 0.05);
+
 $ratio: 10%;
 
 $transparency: 0.3;
