--- a/public/src/stylesheets/base/_typography.scss
+++ b/public/src/stylesheets/base/_typography.scss
@@ -102,9 +102,9 @@ address {
 
 %p {
   font-size: 16px;
-  padding: 0.5rem 0;
+  padding-top: 0.5rem;
   @include tablet {
-    padding: 1rem 0;
+    padding-top: 0.75rem;
   }
 }
 
