--- a/public/src/stylesheets/components/_introduction.scss
+++ b/public/src/stylesheets/components/_introduction.scss
@@ -1,13 +1,11 @@
 // Introduction.
 .introduction {
-  // background: url("../assets/images/backgrounds/introduction.svg") no-repeat
-  //   center top / cover;
   &__layout {
     display: grid;
     grid-template-columns: 1fr;
     align-items: center;
     justify-content: space-between;
-    grid-gap: 2rem;
+    grid-gap: 4rem;
     min-height: 600px;
     padding: 5rem 0;
     text-align: center;
@@ -20,6 +18,7 @@
   &__content {
     max-width: 80%;
     margin: auto;
+    font-size: 1.15rem;
     @include tablet {
       margin: unset;
       max-width: 90%;
@@ -34,8 +33,10 @@
     font-weight: $bold;
     padding-bottom: 1rem;
   }
+
   &__illustration {
     display: block;
     margin-left: auto;
+    animation: float 5s alternate infinite ease-in-out;
   }
 }
