Adding form functionallity

--- a/public/src/stylesheets/components/_content.scss
+++ b/public/src/stylesheets/components/_content.scss
@@ -27,6 +27,7 @@
     color: $dark-text;
     font-weight: $semi-bold;
     position: relative;
+  }
   &__illustration {
     grid-area: illustration;
   }
