--- a/public/src/stylesheets/components/_logo.scss
+++ b/public/src/stylesheets/components/_logo.scss
@@ -5,6 +5,7 @@
   text-transform: uppercase;
   letter-spacing: 2px;
   &__text {
+    pointer-events: none;
     &--light {
       color: $primary-color;
     }
