Hiding Recaptcha badge

--- a/public/src/stylesheets/shame/_shame.scss
+++ b/public/src/stylesheets/shame/_shame.scss
@@ -10,3 +10,8 @@
 //  .section p {
 //     color: red !important;
 //  }
+
+// Needed to hide the Google Recaptcha badge.
+.grecaptcha-badge {
+  visibility: collapse !important;
+}
