--- a/public/src/stylesheets/main.scss
+++ b/public/src/stylesheets/main.scss
@@ -27,6 +27,7 @@
 @import "components/socials";
 @import "components/separator";
 @import "components/anchor";
+@import "components/pills";
 
 @import "layout/containers";
 @import "layout/footer";
