--- a/public/src/stylesheets/components/_pills.scss
+++ b/public/src/stylesheets/components/_pills.scss
@@ -3,9 +3,8 @@ $padding: 0.5rem;
 $margin: 0.25rem;
 
 .pills {
-  display: inline;
+  display: inline-block;
   padding-bottom: $padding;
-  //   transform: translateX(-#{$margin});
 }
 
 // Pill.
