--- a/public/src/stylesheets/components/_introduction.scss
+++ b/public/src/stylesheets/components/_introduction.scss
@@ -26,8 +26,10 @@
   }
   &__title,
   &__text {
-    color: $dark-text;
     padding-bottom: unset;
+    @include themed {
+      color: theme("text");
+    }
   }
   &__title {
     font-weight: $bold;
