--- a/public/src/stylesheets/components/_logo.scss
+++ b/public/src/stylesheets/components/_logo.scss
@@ -10,7 +10,9 @@
       color: $primary-color;
     }
     &--dark {
-      color: $dark-text;
+      @include themed {
+        color: theme("text");
+      }
     }
   }
 }
