--- a/public/src/stylesheets/components/_separator.scss
+++ b/public/src/stylesheets/components/_separator.scss
@@ -1,7 +1,9 @@
 // Separator.
 .separator {
-  background: $border;
   height: 1px;
   border: unset;
   margin: unset;
+  @include themed {
+    background: theme("border");
+  }
 }
