--- a/public/src/stylesheets/components/_toggle.scss
+++ b/public/src/stylesheets/components/_toggle.scss
@@ -3,7 +3,6 @@
   $self: &;
   width: 40px;
   height: 30px;
-  color: $dark-text;
   background: transparent;
   position: relative;
   padding: initial;
@@ -12,6 +11,9 @@
   transition: all 0.35s ease-in-out;
   z-index: 4;
   outline: none;
+  @include themed {
+    color: theme("text");
+  }
   @include tablet {
     display: none;
   }
@@ -24,7 +26,9 @@
     position: absolute;
     width: 100%;
     height: 2px;
-    background: $dark-text;
+    @include themed {
+      background: theme("text");
+    }
     transition: all 0.25s ease-in-out;
   }
   &:before {
