Refactoring dark mode

--- a/public/src/stylesheets/main.scss
+++ b/public/src/stylesheets/main.scss
@@ -28,6 +28,7 @@
 @import "components/separator";
 @import "components/anchor";
 @import "components/pills";
+@import "components/background";
 
 @import "layout/containers";
 @import "layout/footer";
