Changing theme name

--- a/public/src/stylesheets/abstracts/_variables.scss
+++ b/public/src/stylesheets/abstracts/_variables.scss
@@ -21,7 +21,7 @@ $border: rgba(0, 0, 0, 0.05);
 $border-dark: rgba(255, 255, 255, 0.05);
 
 $themes: (
-  default: (
+  light: (
     background: $background,
     text: $text,
     border: $border,
