--- a/public/src/stylesheets/layout/_header.scss
+++ b/public/src/stylesheets/layout/_header.scss
@@ -7,8 +7,8 @@
   z-index: 5;
   padding: 0.75rem 0;
   @include themed {
-    background: transparentize(t("background"), 0.1);
-    border-bottom: 1px solid t("border");
+    background: transparentize(theme("background"), 0.1);
+    border-bottom: 1px solid theme("border");
   }
   @include tablet {
     padding: 0.35rem 0;
