--- a/public/src/stylesheets/components/_content.scss
+++ b/public/src/stylesheets/components/_content.scss
@@ -27,7 +27,7 @@
     font-weight: $semi-bold;
     position: relative;
     @include themed {
-      color: theme("text");
+      color: theme($text);
     }
   }
   &__illustration {
