--- a/public/src/stylesheets/components/_introduction.scss
+++ b/public/src/stylesheets/components/_introduction.scss
@@ -28,7 +28,7 @@
   &__text {
     padding-bottom: unset;
     @include themed {
-      color: theme("text");
+      color: theme($text);
     }
   }
   &__title {
