--- a/public/src/stylesheets/components/_skills.scss
+++ b/public/src/stylesheets/components/_skills.scss
@@ -17,7 +17,7 @@
   &__title {
     font-weight: $semi-bold;
     @include themed {
-      color: theme("text");
+      color: theme($text);
     }
   }
   &__layout {
@@ -46,12 +46,12 @@
   &__title {
     font-weight: $semi-bold;
     @include themed {
-      color: theme("text");
+      color: theme($text);
     }
   }
   &__text {
     @include themed {
-      color: theme("text");
+      color: theme($text);
     }
   }
 }
