--- a/public/src/stylesheets/layout/_footer.scss
+++ b/public/src/stylesheets/layout/_footer.scss
@@ -3,7 +3,7 @@
   text-align: center;
   padding: 2.5rem 0;
   @include themed {
-    background: theme("background-accent");
+    background: theme($background-accent);
   }
   @include tablet {
     text-align: left;
