--- a/public/src/stylesheets/components/_fallback.scss
+++ b/public/src/stylesheets/components/_fallback.scss
@@ -5,7 +5,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: $grey-100;
+  background: $grey;
   z-index: 2147000000;
   text-align: center;
   display: flex;
@@ -19,11 +19,11 @@
     margin-bottom: 2.5rem;
   }
   &__text {
-    color: $grey-900;
+    color: $grey;
     padding: 0.25rem 0;
   }
   &__content {
-    background: $grey-200;
+    background: $grey;
     padding: 2rem;
     @include laptop {
       padding: 4rem;
@@ -43,7 +43,7 @@
       margin-bottom: 0;
     }
     &__title {
-      color: $grey-900;
+      color: $grey;
       padding-bottom: 0;
     }
   }
