Implement dark mode

--- a/public/src/stylesheets/main.scss
+++ b/public/src/stylesheets/main.scss
@@ -29,6 +29,7 @@
 @import "components/anchor";
 @import "components/pills";
 @import "components/background";
+@import "components/switch";
 
 @import "layout/containers";
 @import "layout/footer";
