Fix responsive issues

--- a/public/src/stylesheets/components/_introduction.scss
+++ b/public/src/stylesheets/components/_introduction.scss
@@ -19,7 +19,7 @@
   &__content {
     margin: auto;
     font-size: 1.15rem;
-    @include tablet {
+    @include laptop {
       margin: unset;
       max-width: 90%;
     }
