--- a/public/src/stylesheets/components/_fallback.scss
+++ b/public/src/stylesheets/components/_fallback.scss
@@ -1,11 +1,11 @@
 // Fallback.
 .fallback {
+  background: $background-color;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: $grey;
   z-index: 2147000000;
   text-align: center;
   display: flex;
@@ -16,14 +16,15 @@
   }
 
   &__logo {
+    display: block;
     margin-bottom: 2.5rem;
   }
   &__text {
-    color: $grey;
+    color: $text;
     padding: 0.25rem 0;
   }
   &__content {
-    background: $grey;
+    background: $background-color-accent;
     padding: 2rem;
     @include laptop {
       padding: 4rem;
@@ -43,7 +44,7 @@
       margin-bottom: 0;
     }
     &__title {
-      color: $grey;
+      color: $text;
       padding-bottom: 0;
     }
   }
