Deploy custom error pages

--- a/public/src/stylesheets/components/_introduction.scss
+++ b/public/src/stylesheets/components/_introduction.scss
@@ -32,7 +32,8 @@
   }
   &__title {
     font-weight: $bold;
-    padding-bottom: 1rem;
+    padding-bottom: 1.5rem;
+    line-height: 1.5;
   }
 
   &__illustration {
